--- a/css/styles.css
+++ b/css/styles.css
@@ -666,6 +666,10 @@ progress {
     max-width: 1320px;
   }
 }
+.column {
+    float: left;
+    width: 50%;
+}
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
@@ -675,6 +679,7 @@ progress {
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
+
 .row > * {
   flex-shrink: 0;
   width: 100%;
@@ -11777,3 +11782,22 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+#ag1 {
+    width: 1800px;
+    width: 1000px;
+}
+#ag2 {
+    width: 1000px;
+    width: 500px;
+}
+#ag3 {
+    width: 1000px;
+    width: 500px;
+}
+#ag4 {
+    width: 1000px;
+    width: 500px;
+}
+
+html.dark body{background:"#A0AECD";}
